--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>LaslesVPN</title>
 
-<link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 2560px)" href="../styles/desktop/desktop.css">
+<link rel="stylesheet" media="screen and (min-width: 2560px)" href="../styles/desktop/desktop4k.css">
+<link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 2559px)" href="../styles/desktop/desktop.css">
 <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 767px)" href="../styles/mobile/mobile.css">
 </head>
 
