modified:   src/html/index.html 	modified:   src/scripts/script.js 	modified:   src/styles/desktop/footerSection.css 	modified:   src/styles/desktop/headerSection.css 	modified:   src/styles/mobile/headerSection.css

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -40,7 +40,8 @@
         <!-- burder menu -->
         <div class="burger-menu-wrapper">
             <div class="burger-menu" id="burger-btn">
-                <p>| |</p>
+                <span class="line1">|</span>
+                <span class="line2">|</span>
             </div>
         </div>
     </header>
